--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,14 @@ addons:
 before_install:
  - export GOPATH=~/go
  - go get github.com/BurntSushi/toml-test
- # - git clone https://github.com/BurntSushi/toml-test
+ - git clone https://github.com/BurntSushi/toml-test
 install:
  # - pip install tox-travis
  - pip install pytest
 # - python setup.py install
  # - chmod +x ./tests/*.sh
 script:
+ - pytest
  - ~/go/bin/toml-test ./tests/decoding_test3.sh
  # - tox -e py
  # - tox -e check
