--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,11 @@ before_install:
  - export GOPATH=~/go
  - go get github.com/BurntSushi/toml-test
  - git clone https://github.com/BurntSushi/toml-test
- - hg clone http://hg.logilab.org/review/logilab/common/
+ #- hg clone http://hg.logilab.org/review/logilab/common/
 install:
  # - pip install tox-travis
- - python common/setup.py install
+# - python common/setup.py install
+ - pip install logilab-common
  - pip install pytest
 # - python setup.py install
  # - chmod +x ./tests/*.sh
