--- a/.travis.yml
+++ b/.travis.yml
@@ -11,25 +11,19 @@ addons:
     packages:
     - git
     - golang
-    - mercurial
+    # - mercurial
     # - python-logilab-common
 before_install:
  - export GOPATH=~/go
  - go get github.com/BurntSushi/toml-test
- - git clone https://github.com/BurntSushi/toml-test
+ # - git clone https://github.com/BurntSushi/toml-test
  #- hg clone http://hg.logilab.org/review/logilab/common/
-install:
- # - pip install tox-travis
-# - python common/setup.py install
+# install:
  # - pip install logilab-common
- - pip install -I "pytest<3.3"
+ # - pip install -I "pytest<3.3"
 # - python setup.py install
  # - chmod +x ./tests/*.sh
 script:
  - ~/go/bin/toml-test ./tests/decoding_test3.sh
- - pytest
- # - tox -e py
- # - tox -e check
- - 
 
 
